# job-manager

./: .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  LICENSE  README.PYPI.md  README.md  pyproject.toml
.github/: main.cloudbuild.yaml
.github/configs/: commitlint.config.js  commitlint.config.mjs
.github/workflows/: checks.base.yaml  checks.branches.yaml  release.yaml
src/ethiack_job_manager/: __init__.py  cli.py  manager.py  types.py  utils.py
